<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:id="@+id/main"
    tools:context=".view.DetailCarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_car"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/desc_image_car"
                android:scaleType="centerCrop"
                android:src="@drawable/car_sample"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tx_brand"
                style="@style/TextShortDetail"
                android:text="@string/brand_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_car"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tx_yearProduction"
                style="@style/TextShortDetail"
                android:text="@string/production_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_car"
                app:layout_constraintTop_toBottomOf="@id/tx_brand" />

            <TextView
                android:id="@+id/tx_country"
                style="@style/TextShortDetail"
                android:text="@string/country_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_car"
                app:layout_constraintTop_toBottomOf="@id/tx_yearProduction" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/yellow_banana"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_car" />

            <TextView
                android:id="@+id/tx_titleSpecs"
                style="@style/TextTitle"
                android:text="@string/spec_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <TextView
                android:id="@+id/tx_contentSpec"
                style="@style/TextContent"
                android:text="@string/content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_titleSpecs" />

            <TextView
                android:id="@+id/tx_titleDesc"
                style="@style/TextTitle"
                android:text="@string/desc_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_contentSpec" />

            <TextView
                android:id="@+id/tx_contentDesc"
                style="@style/TextContent"
                android:text="@string/content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_titleDesc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:text="@string/bagikan_detail"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>