<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_carRow"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/brown"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <ImageView
            android:id="@+id/img_carItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/car_sample"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_brandRow"
            style="@style/TextShortDetail"
            android:text="@string/brand_title"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_carItem"
            app:layout_constraintTop_toTopOf="@+id/img_carItem" />

        <TextView
            android:id="@+id/tx_yearProductionRow"
            style="@style/TextShortDetail"
            android:text="@string/production_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_carItem"
            app:layout_constraintTop_toBottomOf="@+id/tx_brandRow" />

        <TextView
            android:id="@+id/tx_countryRow"
            style="@style/TextShortDetail"
            android:text="@string/country_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_carItem"
            app:layout_constraintTop_toBottomOf="@+id/tx_yearProductionRow" />

        <ProgressBar
            android:id="@+id/item_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/img_carItem"
            app:layout_constraintEnd_toEndOf="@+id/img_carItem"
            app:layout_constraintStart_toStartOf="@+id/img_carItem"
            app:layout_constraintTop_toTopOf="@+id/img_carItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>